--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <!-- Rest of the HTML remains the same -->
     <header>
         <div class="container">
-            <h1>CONSTRUTOPIA</h1>
+            <h1>CONSTRUCTOPIA</h1>
             <p>Roll the Dice, Build it Nice!</p>
         </div>
     </header>
@@ -213,7 +213,7 @@
             </div>
 
             <div id="introduction" class="tab-content active">
-                <h2>Welcome to CONSTRUTOPIA!</h2>
+                <h2>Welcome to CONSTRUCTOPIA!</h2>
                 <p>A strategic game of chance and building skills.</p>
                 <div class="product-showcase">
                     <img src="/api/placeholder/300/200" alt="Game Box">
