--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             </div>
         </div>
 
-        <a href="#" class="download-button">Download Game Rules PDF</a>
+        <a href="CONTRUCTOPIA.pdf" class="download-button">Download Game Rules PDF</a>
     </main>
 
     <footer>
